# HostBridge

./: .gitignore  build.gradle  settings.gradle
common-ui/: build.gradle
epoctest/: CMakeLists.txt  build.gradle
epoctest/src/main/: AndroidManifest.xml
epoctest/src/main/assets/: testconfig.txt
epoctest/src/main/cpp/analyticalmanager/: AMSerializer.cpp  MathHelp.cpp  NeuralNetCoeff.cpp  NeuralNetCoeffNode.cpp  StringHelp.cpp  amUtil_CalculateBGE.cpp  amUtil_CheckForEarlyInjection.cpp  amUtil_ComputeCalculatedResults.cpp  amUtil_ComputeCorrectedResults.cpp  amUtil_PerformRealTimeQC.cpp  amUtil_common.cpp  analyticalmanager-lib.cpp  analyticalmanager.cpp  analyticalmanager2.cpp
epoctest/src/main/cpp/analyticalmanager/include/: AMSerializer.h  LibCallReturnCode.h  MathHelp.h  NeuralNetCoeff.h  NeuralNetCoeffNode.h  NeuralNetCoeffVector.h  StringHelp.h  amUtil_common.h  analyticalmanager.h  globals.h  sensorreadings.h
epoctest/src/main/cpp/analyticalmanager/to/: bge_parameters.pb.cc  bge_parameters.pb.h  calc_bge_request.pb.cc  calc_bge_request.pb.h  calc_bge_response.pb.cc  calc_bge_response.pb.h  check_for_early_injection_request.pb.cc  check_for_early_injection_request.pb.h  check_for_early_injection_response.pb.cc  check_for_early_injection_response.pb.h  compute_calculated_results_request.pb.cc  compute_calculated_results_request.pb.h  compute_calculated_results_response.pb.cc  compute_calculated_results_response.pb.h  compute_corrected_results_request.pb.cc  compute_corrected_results_request.pb.h  compute_corrected_results_response.pb.cc  compute_corrected_results_response.pb.h  final_result.pb.cc  final_result.pb.h  humidity_struct.pb.cc  humidity_struct.pb.h  levels.pb.cc  levels.pb.h  perform_realtime_qc_request.pb.cc  perform_realtime_qc_request.pb.h  perform_realtime_qc_response.pb.cc  perform_realtime_qc_response.pb.h  reading.pb.cc  reading.pb.h  realtime_qc.pb.cc  realtime_qc.pb.h  sensor_info.pb.cc  sensor_info.pb.h  sensor_readings.pb.cc  sensor_readings.pb.h
epoctest/src/main/cpp/analyticalmanager_coox/: AMCooxSerializer.cpp  AMCooxUtil_CalculateResults.cpp  ResultsCalculator.cpp  analyticalmanager_coox-lib.cpp
epoctest/src/main/cpp/analyticalmanager_coox/include/: AMCooxSerializer.h  AMCooxUtil.h  CooxModel.h  ResultsCalculator.h
epoctest/src/main/cpp/analyticalmanager_coox/to/: calculate_results_request.pb.cc  calculate_results_request.pb.h  calculate_results_response.pb.cc  calculate_results_response.pb.h  calculated_hgb_result.pb.cc  calculated_hgb_result.pb.h  coox_model.pb.cc  coox_model.pb.h  point.pb.cc  point.pb.h
epoctest/src/main/cpp/shared/: AMSerializerHelper.cpp  amhelper.cpp
epoctest/src/main/cpp/shared/include/: AMSerializerHelper.h  amhelper.h
epoctest/src/main/java/com/epocal/epoctest/: ExampleAnalyticalManagerCalls.java  LegacyTestController.java  TestConfigurationManager.java  TestContainerEvents.java  TestController.java  TestEventInfo.java  TestEventInfoType.java  TestManager.java  TestStatusErrorType.java  TestStatusType.java
epoctest/src/main/java/com/epocal/epoctest/analyticalmanager/: AMException.java  AMFileUtil.java  AMSerializer.java  AnalyticalManager.java  CalculateBGEResponse.java  CheckForEarlyInjectionResponse.java  ComputeCalculatedResultsResponse.java  ComputeCorrectedResultsResponse.java  LibraryCallReturnCode.java  PerformRealTimeQCResponse.java
epoctest/src/main/java/com/epocal/epoctest/di/: defaultClass.java
epoctest/src/main/java/com/epocal/epoctest/enumtype/: BarcodeVerificationCode.java  QAScheduleLookoutReturnCode.java  ResultType.java  TestProcessStateReturnCode.java  TestResultRange.java  ValidateAnalyteTestReturnCode.java
epoctest/src/main/java/com/epocal/epoctest/testconfiguration/: ADCSetting.java  BubbleDetect.java  CardSetup.java  CardTabSetup.java  ChannelConfig.java  ChannelLimit.java  DryCardCheckConfig.java  DryCardSequence.java  ExtraByte.java  ExtraParameter.java  HostTestResultConfig.java  HumidityDetect.java  InsanityRange.java  LimitKey.java  Operator.java  OperatorRoles.java  QualityControlLimit.java  QualityControlLimitPhase.java  ReaderConfig.java  ReaderTimer.java  RealTimeQc.java  ReportableRange.java  Role.java  SamplingInfo.java  SelfCheckConfig.java  SelfCheckSequence.java  Sensor.java  SensorDescriptor.java  SensorLayout.java  SequenceBlock.java  SequenceItem.java  TestConfig.java  TestConfigVersion.java  TestConfiguration.java  TestConfigurationSet.java  VersionObject.java  Window.java  WindowPhase.java
epoctest/src/main/java/com/epocal/epoctest/testprocess/: BGETestCalculation.java  ITestCalculation.java  PerformTestCalculation.java  TestCommunication.java  TestDataProcessor.java  TestStateActionEnum.java  TestStateDataObject.java  TestStateEnum.java  TestStateEventEnum.java  TestStatusEnum.java
epoctest/src/main/java/com/epocal/epoctest/teststate/: TestState.java
epoctest/src/main/java/com/epocal/epoctest/type/: BarcodeInformation.java  ChannelTypeToSensorType.java  DeviceIdInfoData.java  TestDataFormatConvert.java  TestRawResultCollection.java
epoctest/src/main/java/com/epocal/epoctest/uidriver/: IUITestDriver.java  PatientTestUIDriver.java  QATestUIDriver.java  TestUIDriver.java
epoctest/src/main/java/com/epocal/epoctest/uimessage/: EpocTestUIMessage.java  ForeColorType.java  TestMessageContext.java
epoctest/src/proto/: bge_parameters.proto  calc_bge_request.proto  calc_bge_response.proto  calculate_results_request.proto  calculate_results_response.proto  calculated_hgb_result.proto  check_for_early_injection_request.proto  check_for_early_injection_response.proto  compute_calculated_results_request.proto  compute_calculated_results_response.proto  compute_corrected_results_request.proto  compute_corrected_results_response.proto  coox_model.proto  final_result.proto  humidity_struct.proto  levels.proto  perform_realtime_qc_request.proto  perform_realtime_qc_response.proto  point.proto  reading.proto  realtime_qc.proto  sensor_info.proto  sensor_readings.proto
epoctest/test/java/com/epocal/epoctest/teststate/legacyepoctest/: GetReaderIdTest.java
(+1028 files in other folders)
